--- a/figuras.html
+++ b/figuras.html
@@ -4,10 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <title>Figuras Geometricas</title>
 </head>
 <body>
-    <h1>Figuras Geométricas</h1>
+    <header class="header">
+        <h1 class="header-h1">Figuras Geométricas</h1>
+        <p class="header-p">Este es el primer taller del curso de JavaScript </p>
+    </header>
+    <section class="section">
+        <div class="section__cuadrado">
+            <h2>Calcula el área y perimetro de unu cuadrado</h2>
+            <form>
+                <label for="inputCuadrado">Escribe cuanto mide cada lado de tu Cuadrado</label>
+                <input id="inputCuadrado" type="number" >
+                <div class="botones">
+                    <button type="button" onclick="calcularPerimetroCuadrado()" >Calcular perimetro</button>
+                    <button type="button" onclick="calcularAreaCuadrado()" >Calcular área</button>
+                </div>
+            </form>
+        </div>
+        <div class="section__triangulo">
+            <h2>Calcula el área y perimetro de unu cuadrado</h2>
+            <form>
+                <label for="inputCuadrado">Escribe cuanto mide cada lado de tu Cuadrado</label>
+                <input id="inputCuadrado" type="number" >
+                <div class="botones">
+                    <button type="button" onclick="calcularPerimetroCuadrado()" >Calcular perimetro</button>
+                    <button type="button" onclick="calcularAreaCuadrado()" >Calcular área</button>
+                </div>
+            </form>
+        </div>
+        <div class="section__circulo">
+            <h2>Calcula el área y perimetro de unu cuadrado</h2>
+            <form action="">
+                <label for="inputCuadrado">Escribe cuanto mide cada lado de tu Cuadrado</label>
+                <input id="inputCuadrado" type="number" >
+                <button type="button" onclick="calcularPerimetroCuadrado()" >Calcular perimetro</button>
+                <button type="button" onclick="calcularAreaCuadrado()" >Calcular área</button>
+            </form>
+        </div>
+    </section>
 
     <script src="./figuras.js"></script>
 </body>
